REmoved the text-overflow, testing on mobile to make sure company name is visible

--- a/src/components/navigation_header.css
+++ b/src/components/navigation_header.css
@@ -204,7 +204,6 @@
         font-size: 22px;
         white-space: nowrap;
         overflow: hidden;
-        text-overflow: ellipsis;
     }
     
     .contact-button{
